Fix: force .nav-collapse height to auto when window width > 979px

--- a/inc/assets/less/tc_custom_responsive.less
+++ b/inc/assets/less/tc_custom_responsive.less
@@ -101,6 +101,10 @@
   // .tc-is-mobile .navbar .nav li > ul ul {
   //   display: block;
   // }
+  /* force min .nav-collapse height to auto */
+  .nav-collapse.collapse {
+    height: auto !important;
+  }
 }
 
 @media (max-width: 979px) {
